[Bug Fix]: Resolved project board select box overflow issue.

--- a/media/css/projectboard.css
+++ b/media/css/projectboard.css
@@ -22,6 +22,8 @@
 }
 
 .projectSelection select {
+    overflow: hidden;
+    text-overflow: ellipsis;
     height: auto;
     flex: 2;
     font-size: 1.25rem;
